--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+     <div>
+       Welcome to prism
+     </div>
     </main>
     <!--main section end-->
 
