first section commited

--- a/index.html
+++ b/index.html
@@ -52,9 +52,18 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-     <div>
-       Welcome to prism
+      <section>
+     <div class="wrapper">
+      <div>
+       <h2>Welcome to prism, a free responsive site template by TEMPLATED<h2>
      </div>
+     <div>
+       <p>Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.</p>
+       <br>
+       <button>Get started</button>
+     </div>
+     </div>
+   </section>
     </main>
     <!--main section end-->
 
