--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
      </div>
      </div>
    </section>
+   <section>
+     <div class="wrapper">
+       <div>
+         <h3>Magna  feugiat adipiscing</h3> 
+         <p>Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.Morbi pharetria vitae felis placerat.Nulla risus orci , dapibus id malesuada et nec.malesuada quis orci. Pellentesque eget consequal. </p>
+         <button >Learn More</button>
+       </div>
+       <div> 
+        <ul>
+          <li>lpsum nisl sed cursus magna</li>
+          <li>Amet veroeros sed aliquam consequat</li>
+          <li>Tempus lorem  adipiscing et lorem</li>
+          <li>Morbi pharetra vitae felis placerat</li>
+          <li>Pharetra nulla rusus orci dapibus</li>
+        </ul>
+       </div>
+     </div>
+   </section>
     </main>
     <!--main section end-->
 
