--- a/index.html
+++ b/index.html
@@ -73,14 +73,43 @@
        </div>
        <div> 
         <ul>
-          <li>lpsum nisl sed cursus magna</li>
-          <li>Amet veroeros sed aliquam consequat</li>
-          <li>Tempus lorem  adipiscing et lorem</li>
-          <li>Morbi pharetra vitae felis placerat</li>
-          <li>Pharetra nulla rusus orci dapibus</li>
+          <li><i class="fa fa-check"></i>lpsum nisl sed cursus magna</li>
+          <li><i class="fa fa-check"></i>Amet veroeros sed aliquam consequat</li>
+          <li><i class="fa fa-check"></i>Tempus lorem  adipiscing et lorem</li>
+          <li><i class="fa fa-check"></i>Morbi pharetra vitae felis placerat</li>
+          <li><i class="fa fa-check"></i>Pharetra nulla rusus orci dapibus</li>
         </ul>
        </div>
      </div>
+   </section>
+   <section>
+    <div class="wrapper" >
+      <div>
+      <img src="assets/img/pic01.jpg" >
+    </div>
+    <div>
+      <h2>Ipsum pharetra tempus</h2>
+      <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. </p>
+      <button>DETAILS</button>
+    </div>
+    <div>
+      <img src="assets/img/pic02.jpg" >
+    </div>
+    <div>
+      <h2>Magna consequat felis</h2>
+      <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. </p>
+      <button>DETAILS</button>
+    </div>
+    <div>
+      <img src="assets/img/pic03.jpg" >
+    </div>
+    <div>
+      <h2>Vitae placerat adipiscing</h2>
+      <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. </p>
+      <button>DETAILS</button>
+    </div>
+    <button>IPSUM MAGNA TEMPUS</button>
+    </div>
    </section>
     </main>
     <!--main section end-->
