--- a/index.html
+++ b/index.html
@@ -111,12 +111,31 @@
     <button>IPSUM MAGNA TEMPUS</button>
     </div>
    </section>
+   
     </main>
     <!--main section end-->
 
     <!--footer section start-->
     <footer>      
-
+     <div>
+       <h3>Orci malesuada</h3>
+       <p>Morbi pharetra vitae felis placerat pharetra.  Nulla risus orci , dapibus id malesuada et  nec, malesuada quis pellentesque eget</p>
+       <form>
+         <input type="text" placeholder="Name" >
+         <input type="email" placeholder="Email">
+         <textarea rows="10" cols="5" placeholder="Message" ></textarea>
+         <button>send message</button>>
+       </form>
+     </div>
+     <div>
+       <ul>
+        <li><a href="#" ><i class="fa fa-twitter"></i> twitter.com/untitled-tld</a></li>
+        <li><a href="#"><i class="fa fa-facebook"></i> facebook.com/untitled-tld</a></li>
+        <li><a href="#"><i class="fa fa-instagram"></i> instragram.com/untitled-tld</a></li>
+        <li><a href="#">information@untitled.tld</a></li>
+        <li><a href="#">1234,Somewhere Road Suite 9823 Nashville, TN 00000-0000</a></li>
+       </ul>
+     </div>
     </footer>
     <!--footer section end-->
 
