--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
          <input type="text" placeholder="Name" >
          <input type="email" placeholder="Email">
          <textarea rows="10" cols="5" placeholder="Message" ></textarea>
-         <button>send message</button>>
+         <button>send message</button>
        </form>
      </div>
      <div>
