--- a/index.html
+++ b/index.html
@@ -1,148 +1,138 @@
 <!doctype html>
-
-<!-- If multi-language site, reconsider usage of html lang declaration here. -->
 <html lang="en"> 
-
 <head>
- 
   <meta charset="utf-8">
-
-  <title>prisml </title>
-  
-  <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
-  <!-- <meta name="description" lang="en" content=""> -->
-  
-  <!-- Keywords to help with SEO go here. Note: Usage of lang tag.  -->
-  <!-- <meta name="keywords" lang="en" content=""> -->
-  
-  <!-- View-port Basics: http://mzl.la/VYREaP -->
-  <!-- This meta tag is used for mobile device to display the page without any zooming,
-       so how much the device is able to fit on the screen is what's shown initially. 
-       Remove comments from this tag, when you want to apply media queries to the website. -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
-  
-  <!-- To adhear no-cache for Chrome -->
-<!--   <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-store, no-cache" />
-  <meta http-equiv="Expires" content="0" /> -->
-
+  <title>Home | Prisml</title>
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico" />
-
   <!--font-awesome link for icons-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
   <link rel="stylesheet" media="screen" href="assets/css/style.css" >
-
-  <!-- html5shiv aka html5 shim. Supporting HTML5 and CSS for IE browsers less than IE9. -->	
-  <!--[if lt IE 9]>  
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>  
-  <![endif]-->
-
 </head>
-
 <body>
   <!--container start-->
   <div class="container">
     <!--header section start-->
-    <header>
-      
+    <header>    
     </header>
     <!--header section start-->
     <!--main section start-->
     <main>
-      <section>
-     <div class="wrapper">
-      <div>
-       <h2>Welcome to prism, a free responsive site template by TEMPLATED<h2>
-     </div>
-     <div>
-       <p>Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.</p>
-       <br>
-       <button>Get started</button>
-     </div>
-     </div>
-   </section>
-   <section>
-     <div class="wrapper">
-       <div>
-         <h3>Magna  feugiat adipiscing</h3> 
-         <p>Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.Morbi pharetria vitae felis placerat.Nulla risus orci , dapibus id malesuada et nec.malesuada quis orci. Pellentesque eget consequal. </p>
-         <button >Learn More</button>
-       </div>
-       <div> 
-        <ul>
-          <li><i class="fa fa-check"></i>lpsum nisl sed cursus magna</li>
-          <li><i class="fa fa-check"></i>Amet veroeros sed aliquam consequat</li>
-          <li><i class="fa fa-check"></i>Tempus lorem  adipiscing et lorem</li>
-          <li><i class="fa fa-check"></i>Morbi pharetra vitae felis placerat</li>
-          <li><i class="fa fa-check"></i>Pharetra nulla rusus orci dapibus</li>
-        </ul>
-       </div>
-     </div>
-   </section>
-   <section>
-    <div class="wrapper" >
-      <div>
-      <img src="assets/img/pic01.jpg" >
-    </div>
-    <div>
-      <h2>Ipsum pharetra tempus</h2>
-      <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. </p>
-      <button>DETAILS</button>
-    </div>
-    <div>
-      <img src="assets/img/pic02.jpg" >
-    </div>
-    <div>
-      <h2>Magna consequat felis</h2>
-      <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. </p>
-      <button>DETAILS</button>
-    </div>
-    <div>
-      <img src="assets/img/pic03.jpg" >
-    </div>
-    <div>
-      <h2>Vitae placerat adipiscing</h2>
-      <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. </p>
-      <button>DETAILS</button>
-    </div>
-    <button>IPSUM MAGNA TEMPUS</button>
-    </div>
-   </section>
-   
+      <section class="banner">
+        <div class="wrapper">
+          <div>
+            <h2>Welcome to prism, a free responsive site template by TEMPLATED<h2>
+          </div>
+          <div>
+            <p>Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.</p>
+            <button>Get started</button>
+          </div>
+        </div>
+      </section>
+      <section class="feature">
+         <div class="wrapper">
+           <div>
+             <h3>Magna  feugiat adipiscing</h3> 
+             <p>
+             Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.Morbi pharetria vitae felis placerat.Nulla risus orci , dapibus id malesuada et nec.malesuada quis orci. Pellentesque eget consequal. 
+            </p>
+            <a href="#FIXME" title="" >Learn More</a>
+           </div>
+           <div> 
+            <ul>
+              <li>
+                <span><i class="fa fa-check"></i></span>lpsum nisl sed cursus magna
+              </li>
+              <li>
+                <span><i class="fa fa-check"></i></span>Amet veroeros sed aliquam consequat
+              </li>
+              <li>
+                <span><i class="fa fa-check"></i></span>Tempus lorem  adipiscing et lorem
+              </li>
+              <li>
+                <span><i class="fa fa-check"></i></span>Morbi pharetra vitae felis placerat
+              </li>
+              <li>
+                <span><i class="fa fa-check"></i><span>Pharetra nulla rusus orci dapibus
+              </li>
+            </ul>
+           </div>
+         </div>
+      </section>
+      <section class="info">
+        <div class="wrapper" >
+          <figure>
+            <img src="assets/img/pic01.jpg" >
+          </figure>
+          <div>
+            <h4>Ipsum pharetra tempus</h4>
+            <p>
+            Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. 
+            </p>
+            <a href="#FIXME" title="">DETAILS</a>
+          </div>
+          <div>
+            <img src="assets/img/pic02.jpg" >
+          </div>
+          <div>
+            <h4>Magna consequat felis</h4>
+            <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
+            </p>
+            <a href="#FIXME" title="">DETAILS</a>
+          </div>
+          <div>
+            <img src="assets/img/pic03.jpg" >
+          </div>
+          <div>
+            <h4>Vitae placerat adipiscing</h4>
+            <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
+            </p>
+            <a href="#FIXME" title="">DETAILS</a>
+          </div>
+          <a href="#FIXME" title="">DETAILS</a>
+        </div>
+      </section>
     </main>
-    <!--main section end-->
-
-    <!--footer section start-->
-    <footer>      
-     <div>
-       <h3>Orci malesuada</h3>
-       <p>Morbi pharetra vitae felis placerat pharetra.  Nulla risus orci , dapibus id malesuada et  nec, malesuada quis pellentesque eget</p>
-       <form>
-         <input type="text" placeholder="Name" >
-         <input type="email" placeholder="Email">
-         <textarea rows="10" cols="5" placeholder="Message" ></textarea>
-         <button>send message</button>
-       </form>
-     </div>
-     <div>
-       <ul>
-        <li><a href="#" ><i class="fa fa-twitter"></i> twitter.com/untitled-tld</a></li>
-        <li><a href="#"><i class="fa fa-facebook"></i> facebook.com/untitled-tld</a></li>
-        <li><a href="#"><i class="fa fa-instagram"></i> instragram.com/untitled-tld</a></li>
-        <li><a href="#">information@untitled.tld</a></li>
-        <li><a href="#">1234,Somewhere Road Suite 9823 Nashville, TN 00000-0000</a></li>
-       </ul>
-     </div>
-    </footer>
-    <!--footer section end-->
-
+    <footer>
+      <div class="wrapper">
+        <div>
+          <h4>Orci malesuada</h4>
+          <p>Morbi pharetra vitae felis placerat pharetra.  Nulla risus orci , dapibus id malesuada et  nec, malesuada quis pellentesque eget
+          </p>
+          <form method="POST" action="#FIXME">
+            <div class="form-group">
+              <input type="text" placeholder="Name" >
+            </div>
+            <div class="form-group">
+              <input type="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <textarea placeholder="Message" ></textarea>
+            </div>
+            <input type="submit" name="submit" value="Send Message">
+          </form>
+        </div>
+        <div>
+         <ul>
+          <li>
+            <a href="#" target="_blank" rel="nofollow"><i class="fa fa-twitter"></i> twitter.com/untitled-tld</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-facebook"></i> facebook.com/untitled-tld</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-instagram"></i> instragram.com/untitled-tld</a>
+          </li>
+          <li><a href="#">information@untitled.tld</a>
+          </li>
+          <li><a href="#">1234,Somewhere Road Suite 9823 Nashville, TN 00000-0000</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
   </div>
-  <!--container end-->
-
-<!-- <script src="js/vendors/jquery-1.8.3.min.js"></script>
-<script src="js/script.js"></script> -->
+ <!--container end-->
 </body>
 </html>
