--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
       <section class="banner">
         <div class="wrapper">
           <div>
-            <h2>Welcome to prism, a free responsive site template by TEMPLATED<h2>
+            <h2>Welcome to prism, a free responsive site template by TEMPLATED</h2>
           </div>
           <div>
-            <p>Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.</p>
-            <button>Get started</button>
+            <p>Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.
+            </p>
+            <a href="#FIXME" title="Get started" >Get started</a>
           </div>
         </div>
       </section>
@@ -37,7 +38,7 @@
              <p>
              Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.Morbi pharetria vitae felis placerat.Nulla risus orci , dapibus id malesuada et nec.malesuada quis orci. Pellentesque eget consequal. 
             </p>
-            <a href="#FIXME" title="" >Learn More</a>
+            <a href="#FIXME" title="Learn More" >Learn More</a>
            </div>
            <div> 
             <ul>
@@ -54,7 +55,7 @@
                 <span><i class="fa fa-check"></i></span>Morbi pharetra vitae felis placerat
               </li>
               <li>
-                <span><i class="fa fa-check"></i><span>Pharetra nulla rusus orci dapibus
+                <span><i class="fa fa-check"></i></span>Pharetra nulla rusus orci dapibus
               </li>
             </ul>
            </div>
@@ -63,34 +64,34 @@
       <section class="info">
         <div class="wrapper" >
           <figure>
-            <img src="assets/img/pic01.jpg" >
+            <img src="assets/img/pic01.jpg" alt="image" >
           </figure>
           <div>
             <h4>Ipsum pharetra tempus</h4>
             <p>
             Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. 
             </p>
-            <a href="#FIXME" title="">DETAILS</a>
+            <a href="#FIXME" title="DETAILS">DETAILS</a>
           </div>
           <div>
-            <img src="assets/img/pic02.jpg" >
+            <img src="assets/img/pic02.jpg" alt="image" >
           </div>
           <div>
             <h4>Magna consequat felis</h4>
             <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
             </p>
-            <a href="#FIXME" title="">DETAILS</a>
+            <a href="#FIXME" title="DETAILS"  >DETAILS</a>
           </div>
           <div>
-            <img src="assets/img/pic03.jpg" >
+            <img src="assets/img/pic03.jpg" alt="image" >
           </div>
           <div>
             <h4>Vitae placerat adipiscing</h4>
             <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
             </p>
-            <a href="#FIXME" title="">DETAILS</a>
+            <a href="#FIXME" title="DETAILS">DETAILS</a>
           </div>
-          <a href="#FIXME" title="">DETAILS</a>
+          <a href="#FIXME" title="Ipsum Magna Tempus">Ipsum Magna Tempus</a>
         </div>
       </section>
     </main>
@@ -116,17 +117,17 @@
         <div>
          <ul>
           <li>
-            <a href="#" target="_blank" rel="nofollow"><i class="fa fa-twitter"></i> twitter.com/untitled-tld</a>
+            <a href="#FIXME" target="_blank" rel="nofollow"><i class="fa fa-twitter"></i> twitter.com/untitled-tld</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-facebook"></i> facebook.com/untitled-tld</a>
+            <a href="#FIXME"><i class="fa fa-facebook"></i> facebook.com/untitled-tld</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-instagram"></i> instragram.com/untitled-tld</a>
+            <a href="#FIXME"><i class="fa fa-instagram"></i> instragram.com/untitled-tld</a>
           </li>
-          <li><a href="#">information@untitled.tld</a>
+          <li><a href="#FIXME">information@untitled.tld</a>
           </li>
-          <li><a href="#">1234,Somewhere Road Suite 9823 Nashville, TN 00000-0000</a>
+          <li><a href="#FIXME">1234,Somewhere Road Suite 9823 Nashville, TN 00000-0000</a>
           </li>
         </ul>
       </div>
