--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en"> 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, intial-scale=1.0" >
   <title>Home | Prisml</title>
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico" />
@@ -20,11 +21,11 @@
     <!--main section start-->
     <main>
       <section class="banner">
-        <div class="wrapper">
-          <div>
+        <div class="row wrapper">
+          <div class="inline-div banner-div" >
             <h2>Welcome to prism, a free responsive site template by TEMPLATED</h2>
           </div>
-          <div>
+          <div class="banner-div">
             <p>Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.
             </p>
             <a href="#FIXME" title="Get started" >Get started</a>
@@ -32,108 +33,121 @@
         </div>
       </section>
       <section class="feature">
-         <div class="wrapper">
-           <div>
+         <div class="row wrapper">
+           <div class="inline-div sub-feature">
              <h3>Magna  feugiat adipiscing</h3> 
              <p>
              Lorem ipsum nisl sed cursus magna et amet veroeros.Phesellus aliquam et tempus lorem dolor feugiat adipliscing lorem.Morbi pharetria vitae felis placerat.Nulla risus orci , dapibus id malesuada et nec.malesuada quis orci. Pellentesque eget consequal. 
             </p>
             <a href="#FIXME" title="Learn More" >Learn More</a>
            </div>
-           <div> 
+           <div class="sub-feature"> 
             <ul>
               <li>
-                <span><i class="fa fa-check"></i></span>lpsum nisl sed cursus magna
+                <span><i class="fa fa-check fa-custom "></i></span> lpsum nisl sed cursus magna
               </li>
               <li>
-                <span><i class="fa fa-check"></i></span>Amet veroeros sed aliquam consequat
+                <span><i class="fa fa-check fa-custom "></i></span> Amet veroeros sed aliquam consequat
               </li>
               <li>
-                <span><i class="fa fa-check"></i></span>Tempus lorem  adipiscing et lorem
+                <span><i class="fa fa-check fa-custom "></i></span> Tempus lorem  adipiscing et lorem
               </li>
               <li>
-                <span><i class="fa fa-check"></i></span>Morbi pharetra vitae felis placerat
+                <span><i class="fa fa-check fa-custom "></i></span> Morbi pharetra vitae felis placerat
               </li>
               <li>
-                <span><i class="fa fa-check"></i></span>Pharetra nulla rusus orci dapibus
+                <span><i class="fa fa-check fa-custom "></i></span> Pharetra nulla rusus orci dapibus
               </li>
             </ul>
            </div>
          </div>
       </section>
       <section class="info">
-        <div class="wrapper" >
-          <figure>
-            <img src="assets/img/pic01.jpg" alt="image" >
-          </figure>
-          <div>
-            <h4>Ipsum pharetra tempus</h4>
-            <p>
-            Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat. 
-            </p>
-            <a href="#FIXME" title="DETAILS">DETAILS</a>
+        <div class="row wrapper" >
+          <div class="row">
+            <figure class="inline-div sub-info">
+              <img src="assets/img/pic01.jpg" alt="image" >
+            </figure>
+            <div class="sub-info sub-two">
+              <h4>Ipsum pharetra tempus</h4>
+              <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
+              </p>
+              <a href="#FIXME" title="DETAILS">DETAILS</a>
+            </div>
           </div>
-          <div>
-            <img src="assets/img/pic02.jpg" alt="image" >
+          <div class="row">
+            <figure class="inline-div sub-info">
+              <img src="assets/img/pic02.jpg" alt="image" >
+            </figure>
+            <div class="sub-info sub-two Magnaconsequat ">
+              <h4>Magna consequat felis</h4>
+              <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
+              </p>
+              <a href="#FIXME" title="DETAILS">DETAILS</a>
+            </div>
           </div>
-          <div>
-            <h4>Magna consequat felis</h4>
-            <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
-            </p>
-            <a href="#FIXME" title="DETAILS"  >DETAILS</a>
-          </div>
-          <div>
-            <img src="assets/img/pic03.jpg" alt="image" >
-          </div>
-          <div>
-            <h4>Vitae placerat adipiscing</h4>
-            <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
-            </p>
-            <a href="#FIXME" title="DETAILS">DETAILS</a>
+          <div class="row">
+            <figure class="inline-div sub-info">
+              <img src="assets/img/pic03.jpg" alt="image" >
+            </figure>
+            <div class="sub-info sub-two">
+              <h4>Vitae placerat adipiscing</h4>
+              <p>Lorem ipsum nisi sed cursus magna et amet veroeros. Sed phasellus maleuada quis orci. Pallentesque eget consequat.
+              </p>
+              <a href="#FIXME" title="DETAILS">DETAILS</a>
+            </div>
           </div>
           <a href="#FIXME" title="Ipsum Magna Tempus">Ipsum Magna Tempus</a>
         </div>
       </section>
-    </main>
-    <footer>
-      <div class="wrapper">
-        <div>
-          <h4>Orci malesuada</h4>
-          <p>Morbi pharetra vitae felis placerat pharetra.  Nulla risus orci , dapibus id malesuada et  nec, malesuada quis pellentesque eget
-          </p>
-          <form method="POST" action="#FIXME">
-            <div class="form-group">
+      <section class="contact">
+        <div class="row wrapper">
+          <div class="inline-div Orci" >
+            <h5>Orci malesuada</h5>
+            <p>Morbi pharetra vitae felis placerat pharetra.  Nulla risus orci , dapibus id malesuada et  nec, malesuada quis pellentesque eget
+            </p>
+            <div class="row">
+              <form method="POST" action="#FIXME">
+                <div class="form-group inline-div">
               <input type="text" placeholder="Name" >
-            </div>
-            <div class="form-group">
-              <input type="email" placeholder="Email">
-            </div>
-            <div class="form-group">
-              <textarea placeholder="Message" ></textarea>
-            </div>
-            <input type="submit" name="submit" value="Send Message">
-          </form>
+              </div>
+              <div class="form-group inline-div">
+                <input type="email" placeholder="Email">
+              </div>
+              <div class="form-group">
+                <textarea placeholder="Message" ></textarea>
+              </div>
+              <input type="submit" name="submit" value="Send Message">
+            </form>
+          </div>
         </div>
-        <div>
-         <ul>
-          <li>
-            <a href="#FIXME" target="_blank" rel="nofollow"><i class="fa fa-twitter"></i> twitter.com/untitled-tld</a>
-          </li>
-          <li>
-            <a href="#FIXME"><i class="fa fa-facebook"></i> facebook.com/untitled-tld</a>
-          </li>
-          <li>
-            <a href="#FIXME"><i class="fa fa-instagram"></i> instragram.com/untitled-tld</a>
-          </li>
-          <li><a href="#FIXME">information@untitled.tld</a>
-          </li>
-          <li><a href="#FIXME">1234,Somewhere Road Suite 9823 Nashville, TN 00000-0000</a>
-          </li>
+        <div class="inline-div">
+          <ul>
+            <li>
+              <a href="#FIXME" target="_blank" title="twitter" rel="nofollow"><span><i class="fa fa-twitter fa-custom"></i> twitter.com/untitled-tld</span></a>
+            </li>
+            <li>
+              <a href="#FIXME" target="_blank" title="facebook" rel="nofollow"><span><i class="fa fa-facebook fa-custom"></i></span> facebook.com/untitled-tld</a>
+            </li>
+            <li>
+              <a href="#FIXME" target="_blank" title="instagram" rel="nofollow"><span><i class="fa fa-instagram fa-custom"></i></span> instagram.com/untitled-tld</a>
+            </li>
+            <li><a href="mailto:" target="_blank" title="information@untitled.tld" ><span><i class="fa fa-envelope fa-custom"></i></span> information@untitled.tld</a>
+            </li>
+            <li>
+              <address>
+                <span><i class="fa fa-home fa-custom"></i></span> 1234,Somewhere Road Suite 9823 Nashville, TN 00000-0000
+              </address>
+            </li>
         </ul>
       </div>
     </div>
-  </footer>
-  </div>
+  </section>
+</main>
+<footer>
+ <p > &copy; Unititled. All rights reserved.Images: Unsplash. Design: Template.</p>
+</footer>
+</div>
  <!--container end-->
 </body>
 </html>
